# Portfolio

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/portfolio/: admin.py  models.py  serializers.py  storage.py  urls.py  views.py
backend/portfolio/migrations/: 0001_initial.py  0002_certification_delete_milestone_and_more.py  0003_rename_linkedin_link_project_live_link.py
backend/portfolio/tests/: test_api.py  test_models.py
backend/portfolio_backend/: settings.py  settings_test.py  urls.py
backend/sql/: supabase_portfolio_schema.sql
